@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - Add :%attribs argument to startElementNs() SAX handler
 
 0.9.2  2022-12-02T10:49:43+13:00
    - fix valgrind errors in xmlEncodingStr subset.
